@@ -1,3 +1,8 @@
+2005-05-04  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/cverb.cpp:
+	* libutil++/cverb.h: fix comment, remove unecessary friend declaration.
+
 2005-05-04  John Levon  <levon@movementarian.org>
 
 	* daemon/liblegacy/opd_kernel.c: fix previous workaround
